tests/expected_invalid_foreign_fn_fails.diag.out
<input>:6:33: error: foreign functions may not declare `fails`
    public foreign fn read() -> Int fails Failure
                                    ^^^^^
